creat Gallary and added some photos with style

--- a/Gallery.html
+++ b/Gallery.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SwedishScapes</title>
+    <title>Nordic Odyssey-Gallery</title>
     <link rel="stylesheet" href="assets/Styles.css">
 </head>
 
@@ -26,16 +26,36 @@
         </div>
     </header>
     <main>
-        <section>
-            <h2>Cities</h2>
-            <ul>
-                <li>Stockholm</li>
-                <li>Gothenburg</li>
-                <li>Malmö</li>
-            </ul>
-        </section>
-
-
+        <div class="gallery">
+            <div class="img-box">
+                <img src="assets/images/stock1.avif" alt="Stockholm">
+            </div>
+            <div class="img-box">
+                <img src="assets/images/stock2.jpg" alt="Stockholm">
+            </div>
+            <div class="img-box">
+                <img src="assets/images/stockport.jpeg" alt="Stockholm">
+            </div>
+            <div class="img-box">
+                <img src="assets/images/got1.avif" alt="Gothenburg" >
+            </div>
+            <div class="img-box">
+                <img src="assets/images/got2.avif" alt="Gothenburg" >
+            </div>
+            <div class="img-box">
+                <img src="assets/images/got3.webp" alt="Gothenburg" >
+            </div>
+            <div class="img-box">
+                <img src="assets/images/mal1.jpeg" alt="Malmo" >
+            </div>
+            <div class="img-box">
+                <img src="assets/images/mal2.jpeg" alt="Malmo" >
+            </div>
+            <div class="img-box">
+                <img src="assets/images/mal3.webp" alt="Malmo" >
+            </div>
+            
+        </div>
     </main>
     <footer>
         <p>Copyright © Marcus Shaqir 2024</p>
