--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SwedishScapes</title>
+    <title>Nordic Odyssey</title>
     <link rel="stylesheet" href="assets/Styles.css">
 </head>
 
@@ -22,7 +22,7 @@
         </div>
 
         <div class="info">
-            <h1>Swedish Scapes</h1>
+            <h1>Nordic Odyssey</h1>
         </div>
     </header>
     <main>
