fixing the location of ( contact us )

--- a/Gallery.html
+++ b/Gallery.html
@@ -22,12 +22,13 @@
         </div>
 
         <div class="info">
-            <h1>Swedish Scapes</h1>
+            <h1>Nordic Odyssey</h1>
         </div>
     </header>
-    <main>
+    <main class="main-gallary">
         <div class="gallery">
             <div class="img-box">
+                
                 <img src="assets/images/stock1.avif" alt="Stockholm">
             </div>
             <div class="img-box">
@@ -36,6 +37,8 @@
             <div class="img-box">
                 <img src="assets/images/stockport.jpeg" alt="Stockholm">
             </div>
+        
+
             <div class="img-box">
                 <img src="assets/images/got1.avif" alt="Gothenburg" >
             </div>
@@ -45,6 +48,8 @@
             <div class="img-box">
                 <img src="assets/images/got3.webp" alt="Gothenburg" >
             </div>
+
+
             <div class="img-box">
                 <img src="assets/images/mal1.jpeg" alt="Malmo" >
             </div>
