--- a/contact.html
+++ b/contact.html
@@ -24,9 +24,9 @@
             <h1>Swedish Scapes</h1>
         </div>
     </header>
-    <main>
+    <main class="main-contact">
         <section>
-            <h2>Contact Us</h2>
+            <h2 class="get">Contact Us</h2>
             <div class="form-container">
                 <form action="submit_form.php" method="POST">
                     <label for="name">Name:</label>
