--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
                 <a href="#" class="dropbtn" aria-expanded="false" onclick="toggleDropdown()">Menu</a>
                 <div class="dropdown-content">
                     <a href="index.html">Home</a>
-                    <a href="gallery.html">Gallery</a>
+                    <a href="Gallery.html">Gallery</a>
                     <a href="contact.html">Contact</a>
                 </div>
             </div>
