edit the photos sizes and corrected the capital letter to small letter with in the files

--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="This site is about Swedens beautiful cities">
     <title>Nordic Odyssey</title>
-    <link rel="stylesheet" href="assets/Styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
-
 <body>
     <header class="header">
         <div class="sides">
@@ -15,12 +14,11 @@
                 <a href="#" class="dropbtn" aria-expanded="false" onclick="toggleDropdown()">Menu</a>
                 <div class="dropdown-content">
                     <a href="index.html">Home</a>
-                    <a href="Gallery.html">Gallery</a>
+                    <a href="gallery.html">Gallery</a>
                     <a href="contact.html">Contact</a>
                 </div>
             </div>
         </div>
-
         <div class="info">
             <h1>Nordic Odyssey</h1>
         </div>
@@ -39,7 +37,7 @@
                                 Kungliga Slottet Royal Palace and the Nobel Museum, which focuses on the Nobel Prize.
                                 Ferries and sightseeing boats shuttle passengers between the islands.</p>
                         </div>
-                        <img src="assets/images/stockholm.avif" alt="Stockholm" style="width:500px; height:auto;">
+                        <img src="assets/images/stockholm.jpg" alt="Stockholm" class="indexpics">
                     </div>
                 </li>
                 <li>
@@ -53,7 +51,7 @@
                                 landscaped sculpture garden.
                             </p>
                         </div>
-                        <img src="assets/images/gothenburg.jpeg" alt="Gothenburg" style="width:500px; height:auto;">
+                        <img src="assets/images/gothenburg.jpeg" alt="Gothenburg" class="indexpics">
                     </div>
                 </li>
                 <li>
@@ -66,19 +64,16 @@
                                 shops selling local handicrafts. Malmö Castle, a 16th-century fortress built by King
                                 Christian III of Denmark, houses nature, history and art exhibits. </p>
                         </div>
-                        <img src="assets/images/Malmo.webp" alt="Malmö" style="width:500px; height:auto;">
+                        <img src="assets/images/malmo.jpg" alt="Malmö" class="indexpics">
                     </div>
                 </li>
             </ul>
         </section>
         </ul>
         </section>
-
-
     </main>
     <footer>
         <p>Copyright © Marcus Shaqir 2024</p>
     </footer>
 </body>
-
 </html>
