--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - Nordic Odyssey</title>
-    <link rel="stylesheet" href="assets/Styles.css">
+    <meta name="description" content="This site is about Swedens beautiful cities">
+    <title>Nordic Odyssey</title>
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
                 <a href="#" class="dropbtn" aria-expanded="false" onclick="toggleDropdown()">Menu</a>
                 <div class="dropdown-content">
                     <a href="index.html">Home</a>
-                    <a href="Gallery.html">Gallery</a>
+                    <a href="gallery.html">Gallery</a>
                     <a href="contact.html">Contact</a>
                 </div>
             </div>
