fixed the 280px issue in home page and now its working good

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <section>
             <h2 class="Cities">Main Cities in Sweden</h2>
             <ul>
-                <li>
-                    <div class="city-info">
+                <li class="city-info"> 
+                    <div>
                         <div class="text-info">
                             <h3>Stockholm</h3>
                             <p>Stockholm, the capital of Sweden, encompasses 14 islands and more than 50 bridges on an
@@ -40,8 +40,8 @@
                         <img src="assets/images/stockholm.jpg" alt="Stockholm" class="indexpics">
                     </div>
                 </li>
-                <li>
-                    <div class="city-info">
+                <li class="city-info">
+                    <div>
                         <div class="text-info">
                             <h3>Gothenburg</h3>
                             <p>Gothenburg, a major city in Sweden, is situated off the Göta älv river on the country's
@@ -54,8 +54,8 @@
                         <img src="assets/images/gothenburg.jpeg" alt="Gothenburg" class="indexpics">
                     </div>
                 </li>
-                <li>
-                    <div class="city-info">
+                <li class="city-info">
+                    <div>
                         <div class="text-info">
                             <h3>Malmö</h3>
                             <p>Malmö is a coastal city in southern Sweden. It lies at the eastern end of the striking
