fixing the contact page class=info

--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div class="info">
-            <h1>Swedish Scapes</h1>
+            <h1>Nordic Odyssey</h1>
         </div>
     </header>
     <main class="main-contact">
