added css line574 .info h1 padding and h1 font size for better responsiveness on small screens, modified html h3 citis names

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <li class="city-info"> 
                     <div>
                         <div class="text-info">
-                            <h3>Stockholm</h3>
+                            <h3>Sthklm</h3>
                             <p>Stockholm, the capital of Sweden, encompasses 14 islands and more than 50 bridges on an
                                 extensive Baltic Sea archipelago. The cobblestone streets and ochre-colored buildings of
                                 Gamla Stan (the old town) are home to the 13th-century Storkyrkan Cathedral, the
@@ -43,7 +43,7 @@
                 <li class="city-info">
                     <div>
                         <div class="text-info">
-                            <h3>Gothenburg</h3>
+                            <h3>Gthbrg</h3>
                             <p>Gothenburg, a major city in Sweden, is situated off the Göta älv river on the country's
                                 west coast. An important seaport, it's known for its Dutch-style canals and leafy
                                 boulevards like the Avenyn, the city's main thoroughfare, lined with many cafes and
@@ -57,7 +57,7 @@
                 <li class="city-info">
                     <div>
                         <div class="text-info">
-                            <h3>Malmö</h3>
+                            <h3>Mlm</h3>
                             <p>Malmö is a coastal city in southern Sweden. It lies at the eastern end of the striking
                                 Öresund Bridge, a long road and railway bridge–tunnel running to Copenhagen, Denmark. In
                                 the city center, Lilla Torg is a cobblestone square with cafes, half-timbered houses and
