--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
+    <!-- Header Section -->
     <header class="header">
+        <!-- Navigation Menu -->
         <div class="sides">
             <div class="dropdown">
                 <a href="#" class="dropbtn" aria-expanded="false" onclick="toggleDropdown()">Menu</a>
@@ -20,14 +22,18 @@
                 </div>
             </div>
         </div>
+        <!-- Site Title -->
         <div class="info">
             <h1>Nordic Odyssey</h1>
         </div>
     </header>
+
+    <!-- Main Content Section -->
     <main class="main-contact">
         <section>
             <h2 class="get">Contact Us</h2>
             <div class="form-container">
+                <!-- Contact Form -->
                 <form action="submit_form.php" method="POST">
                     <label for="name">Name:</label>
                     <input type="text" id="name" name="name" required>
@@ -42,11 +48,11 @@
                 </form>
             </div>
         </section>
-
     </main>
+
+    <!-- Footer Section -->
     <footer>
         <p>Copyright © Marcus Shaqir 2024</p>
     </footer>
 </body>
-
 </html>
