--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
+    <!-- Header Section -->
     <header class="header">
+        <!-- Navigation Menu -->
         <div class="sides">
             <div class="dropdown">
                 <a href="#" class="dropbtn" aria-expanded="false" onclick="toggleDropdown()">Menu</a>
@@ -19,18 +21,22 @@
                 </div>
             </div>
         </div>
+        <!-- Site Title -->
         <div class="info">
             <h1>Nordic Odyssey</h1>
         </div>
     </header>
+
+    <!-- Main Content Section -->
     <main>
         <section>
             <h2 class="Cities">Main Cities in Sweden</h2>
             <ul>
+                <!-- Stockholm Information -->
                 <li class="city-info"> 
                     <div>
                         <div class="text-info">
-                            <h3>Sthklm</h3>
+                            <h3>Stockholm</h3>
                             <p>Stockholm, the capital of Sweden, encompasses 14 islands and more than 50 bridges on an
                                 extensive Baltic Sea archipelago. The cobblestone streets and ochre-colored buildings of
                                 Gamla Stan (the old town) are home to the 13th-century Storkyrkan Cathedral, the
@@ -40,10 +46,12 @@
                         <img src="assets/images/stockholm.jpg" alt="Stockholm" class="indexpics">
                     </div>
                 </li>
+
+                <!-- Gothenburg Information -->
                 <li class="city-info">
                     <div>
                         <div class="text-info">
-                            <h3>Gthbrg</h3>
+                            <h3>Gothenburg</h3>
                             <p>Gothenburg, a major city in Sweden, is situated off the Göta älv river on the country's
                                 west coast. An important seaport, it's known for its Dutch-style canals and leafy
                                 boulevards like the Avenyn, the city's main thoroughfare, lined with many cafes and
@@ -54,10 +62,12 @@
                         <img src="assets/images/gothenburg.jpeg" alt="Gothenburg" class="indexpics">
                     </div>
                 </li>
+
+                <!-- Malmö Information -->
                 <li class="city-info">
                     <div>
                         <div class="text-info">
-                            <h3>Mlm</h3>
+                            <h3>Malmö</h3>
                             <p>Malmö is a coastal city in southern Sweden. It lies at the eastern end of the striking
                                 Öresund Bridge, a long road and railway bridge–tunnel running to Copenhagen, Denmark. In
                                 the city center, Lilla Torg is a cobblestone square with cafes, half-timbered houses and
@@ -70,6 +80,8 @@
             </ul>
         </section>
     </main>
+
+    <!-- Footer Section -->
     <footer>
         <p>Copyright © Marcus Shaqir 2024</p>
     </footer>
